--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="wrapper">
             
             <div class="logo" href="#top"><!-- Logo -->
-               <img style="float:left;" src="images\logo_sublight.svg">
+               <img src="images\logo_sublight.svg">
             </div>  
             
             <ul id="" class="navBar">
