--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
                 <li>
                 </li>
                 
-                <li class="ourServices"><!-- CONTACT US -->
+                <li class="ourServices"><!-- OUR SERVICES -->
                     <a class="ourServices" href="#">
-                        CONTACT US
+                        OUR SERVICES
                     </a>
                 </li>
-                <li class="ourProducts"><!-- ABOUT US -->
-                    <a href="#">
-                        ABOUT US
-                    </a>
-                </li>
-                <li class="aboutUs"><!-- OUR PRODUCTS -->
+                <li class="ourProducts"><!-- OUR PRODUCTS -->
                     <a href="#">
                         OUR PRODUCTS
                     </a>
                 </li>
-                <li class="contactUs"><!-- OUR SERVICES -->
+                <li class="aboutUs"><!-- ABOUT US -->
                     <a href="#">
-                        OUR SERVICES
+                        ABOUT US
+                    </a>
+                </li>
+                <li class="contactUs"><!-- CONTACT US -->
+                    <a href="#">
+                        CONTACT US
                     </a>
                 </li>
               
