--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                 <option value="Select">Select</option>
       
             </select> 
+          </div>
        </div>
 
        <input onclick="myFunction()" class="formButton" value="SUBMIT" type="submit">
